tests/syntactic/syntax5/syntax5.err
Error: syntax error, unexpected + in file syntax5.dl at line 11
+
^-
1 errors generated, evaluation aborted
